log
ma.,  3 de may. de 2022 19:14:12: 
ma.,  3 de may. de 2022 19:14:12: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
 tests:  1|3
total_score: 10/70
2684978
ma.,  3 de may. de 2022 19:26:52: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:22:10: error: unused variable 'dato' [-Werror=unused-variable]
    void* dato = pq->heapArray->data;
          ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8316d04
ma.,  3 de may. de 2022 19:27:29: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
6705bd7
mi.,  4 de may. de 2022  8:46:28: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|2
total_score: 20/70
93b10bd
mi.,  4 de may. de 2022  8:48:31: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
bca9c9e
mi.,  4 de may. de 2022 21:19:28: 
 heap.c | 35 ++++++++++++++++++-----------------
 1 file changed, 18 insertions(+), 17 deletions(-)
 tests:  3|2
total_score: 25/70
adc5164
mi.,  4 de may. de 2022 21:20:23: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
43efc27
